Fixing country-code visibility

--- a/src/app/right-panel/country-select/country-select.component.scss
+++ b/src/app/right-panel/country-select/country-select.component.scss
@@ -13,6 +13,12 @@
             width: 1.5rem;
             max-width: 1.5rem;
         }
+
+        .clr-combobox-wrapper {
+            .clr-combobox-input {
+                width: 2.5rem;
+            }
+        }
     }
 
     .clr-combobox-wrapper {
